<resources>
    <string name="app_name">study_English</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_en">English</string>
    <string name="action_vn">Tiếng Việt</string>
    <string name="menu_vocabulary">Vocabulary</string>
    <string name="menu_grammar">Grammar</string>
    <string name="menu_basic_test">Basic test</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_communicate">Communicate</string>
    <string name="vocabulary_nopbai">Nộp bài</string>
    <string name="tv_time">Thời gian:</string>
    <string name="btn_previous">Xem lại</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="tv_score_read">Điểm đọc</string>
    <string name="tv_score_listen">Điểm nghe</string>
    <string name="auto_next">Tự động chuyển</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
