<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vocabulary"
            android:title="@string/menu_vocabulary"
            android:icon="@drawable/ic_menu_vocabulary"/>
        <item
            android:id="@+id/nav_grammar"
            android:title="@string/menu_grammar"
            android:icon="@drawable/ic_menu_grammar"/>
        <item
            android:id="@+id/nav_basic_test"
            android:title="@string/menu_basic_test"
            android:icon="@drawable/ic_menu_basic_test"/>
        <item
            android:id="@+id/nav_exam"
            android:title="@string/menu_exam"
            android:icon="@drawable/ic_menu_exam"/>
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_setting"
                android:title="@string/menu_setting"
                android:icon="@drawable/ic_menu_setting"/>
            <item
                android:id="@+id/nav_rate"
                android:title="@string/menu_rate"
                android:icon="@drawable/ic_menu_rate"/>
            <item
                android:id="@+id/nav_about"
                android:title="@string/menu_about"
                android:icon="@drawable/ic_menu_about"/>

        </menu>
    </item>

</menu>
